--- a/src/WpfAnimation.Demo/Themes/Styles.xaml
+++ b/src/WpfAnimation.Demo/Themes/Styles.xaml
@@ -23,8 +23,24 @@
     <SolidColorBrush x:Key="TabItemDisabledBorderBrush" Color="#DBDBDB"/>
 
     <Geometry x:Key="RepeatButton">M3.5445026,0 L7.0890052,7.0890053 L3.0459049E-09,7.0890053 z</Geometry>
+
+    <!--GridSplitter style-->
+    <Style x:Key="VerticalGridSplitterStyle"  TargetType="{x:Type GridSplitter}">
+        <Setter Property="Width" Value="1"/>
+        <Setter Property="Background" Value="#D4D4D4"/>
+        <Setter Property="Panel.ZIndex" Value="2"/>
+    </Style>
+    <Style x:Key="HorisontalGridSplitterStyle"  TargetType="{x:Type GridSplitter}" >
+        <Setter Property="Height" Value="1"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="Background" Value="#D4D4D4"/>
+        <Setter Property="Panel.ZIndex" Value="2"/>
+    </Style>
     
-    <!-- ListBox item style-->
+    <!-- ListBox style-->
+    <Style TargetType ="{x:Type ListBox}">
+        <Setter Property="BorderThickness" Value="0"/>
+    </Style>
     <DataTemplate x:Key="ListItemDataTemplate">
         <Border BorderBrush="#F2F2F2" Padding="5" BorderThickness="0 1 0 1" Margin="0 -1 0 0" >
             <Grid>
@@ -601,7 +617,7 @@
     <Style TargetType="{x:Type TabControl}">
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="Padding" Value="4,4,4,4"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="BorderBrush" Value="{StaticResource TabControlNormalBorderBrush}"/>
         <Setter Property="Background" Value="White"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -618,16 +634,11 @@
                             <RowDefinition x:Name="RowDefinition0" Height="Auto"/>
                             <RowDefinition x:Name="RowDefinition1" Height="*"/>
                         </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Grid.Column="0">
-                            <Border BorderBrush="{StaticResource TabPanelBorderBrush}" 
-                                    BorderThickness="0 1 0 0" Margin="0 0 0 -1" Panel.ZIndex="2" />
-                            <TabPanel x:Name="HeaderPanel" IsItemsHost="true"  
-                                        KeyboardNavigation.TabIndex="1" Panel.ZIndex="1" 
-                                        Background="{StaticResource TabPanelBackgroundBrush}"/>
-                        </StackPanel>
-                        
+                        <TabPanel x:Name="HeaderPanel" Grid.Row="0" Grid.Column="0" IsItemsHost="true"  
+                                    KeyboardNavigation.TabIndex="1" Panel.ZIndex="1" 
+                                    Background="{StaticResource TabPanelBackgroundBrush}"/>
                         <Border x:Name="ContentPanel" BorderBrush="{TemplateBinding BorderBrush}" 
-                                BorderThickness="{TemplateBinding BorderThickness}"
+                                BorderThickness="0 1 0 0"
                                 Background="{TemplateBinding Background}" 
                                 Grid.Column="0" KeyboardNavigation.DirectionalNavigation="Contained" Grid.Row="1" 
                                 KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local">
@@ -695,7 +706,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
                     <Grid SnapsToDevicePixels="true">
-                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Margin="-1 0 -1 0"
+                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,0,1,0" Margin="-1 0 -1 0"
                                 Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
                             <ContentPresenter x:Name="Content" ContentSource="Header" Margin="{TemplateBinding Padding}"
                                               HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" 
