--- a/src/WpfAnimation.Demo/Themes/Styles.xaml
+++ b/src/WpfAnimation.Demo/Themes/Styles.xaml
@@ -23,7 +23,7 @@
     <SolidColorBrush x:Key="TabItemDisabledBorderBrush" Color="#DBDBDB"/>
 
     <Geometry x:Key="RepeatButton">M3.5445026,0 L7.0890052,7.0890053 L3.0459049E-09,7.0890053 z</Geometry>
-
+    <Geometry x:Key="ScrollArrow">M-0,6 L-0,8 8,8 8,-0 6,-0 6,6 z</Geometry>
     <!--GridSplitter style-->
     <Style x:Key="VerticalGridSplitterStyle"  TargetType="{x:Type GridSplitter}">
         <Setter Property="Width" Value="1"/>
@@ -614,6 +614,118 @@
     </Style>
 
     <!--TabControl style-->
+    <ControlTemplate x:Key="HorizontalScrollBarTemplate" TargetType="{x:Type ScrollBar}">
+        <Grid x:Name="Bg" SnapsToDevicePixels="True" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.00001*"/>
+                <ColumnDefinition Width="18"/>
+                <ColumnDefinition Width="18"/>
+            </Grid.ColumnDefinitions>
+            <RepeatButton IsEnabled="{TemplateBinding IsMouseOver}" Grid.Column="1" Command="ScrollBar.PageLeftCommand">
+                <RepeatButton.Style>
+                    <Style TargetType="{x:Type RepeatButton}">
+                        <Setter Property="OverridesDefaultStyle" Value="True"/>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="IsTabStop" Value="False"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type RepeatButton}">
+                                    <Border Background="Transparent" BorderThickness="0">
+                                        <Path x:Name="Arrow" Data="{StaticResource ScrollArrow}" 
+								                HorizontalAlignment="Center" 
+								                VerticalAlignment="Center"
+								                Width="7"
+								                Height="7" 
+								                Stretch="Fill" 
+								                Fill="#9C9C9C"
+                                                RenderTransformOrigin="0.5,0.5" >
+                                            <Path.RenderTransform>
+                                                <TransformGroup>
+                                                    <ScaleTransform/>
+                                                    <SkewTransform/>
+                                                    <RotateTransform Angle="135"/>
+                                                    <TranslateTransform/>
+                                                </TransformGroup>
+                                            </Path.RenderTransform>
+                                        </Path>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="true">
+                                            <Setter Property="Fill" TargetName="Arrow" Value="#7A7A7A"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </RepeatButton.Style>
+            </RepeatButton>
+            <RepeatButton IsEnabled="{TemplateBinding IsMouseOver}" Command="ScrollBar.PageRightCommand" Grid.Column="2">
+                <RepeatButton.Style>
+                    <Style TargetType="{x:Type RepeatButton}">
+                        <Setter Property="OverridesDefaultStyle" Value="True"/>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="IsTabStop" Value="False"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type RepeatButton}">
+                                    <Border Background="Transparent" BorderThickness="0">
+                                        <Path x:Name="Arrow" Data="{StaticResource ScrollArrow}" 
+								                HorizontalAlignment="Center" 
+								                VerticalAlignment="Center"
+								                Width="7"
+								                Height="7" 
+								                Stretch="Fill" 
+								                Fill="#9C9C9C"
+                                                RenderTransformOrigin="0.5,0.5" >
+                                            <Path.RenderTransform>
+                                                <RotateTransform Angle="315"/>
+                                            </Path.RenderTransform>
+                                        </Path>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="true">
+                                            <Setter Property="Fill" TargetName="Arrow" Value="#7A7A7A"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </RepeatButton.Style>
+            </RepeatButton>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" TargetName="Bg" Value="#FFF4F4F4"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    <ControlTemplate x:Key="ScrollViewerTemplate" TargetType="{x:Type ScrollViewer}">
+        <Grid x:Name="Grid" Background="{TemplateBinding Background}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <ScrollBar x:Name="PART_HorizontalScrollBar" Cursor="Arrow"
+                       Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                       Grid.Column="0" Grid.Row="0" Orientation="Horizontal" Padding="0" Margin="0"
+                       ViewportSize="{TemplateBinding ViewportWidth}"
+                       Maximum="{TemplateBinding ScrollableWidth}" Minimum="0"
+                       Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" 
+                       AutomationProperties.AutomationId="HorizontalScrollBar"
+                       Template="{StaticResource HorizontalScrollBarTemplate}"/>
+            <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" Margin="0 0 36 0" 
+                                    Content="{TemplateBinding Content}" 
+                                    ContentTemplate="{TemplateBinding ContentTemplate}" 
+                                    Grid.Column="0" Grid.Row="0" 
+                                    CanContentScroll="{TemplateBinding CanContentScroll}" 
+                                    CanHorizontallyScroll="False" CanVerticallyScroll="False"/>
+        </Grid>
+    </ControlTemplate>
     <Style TargetType="{x:Type TabControl}">
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Setter Property="Padding" Value="4,4,4,4"/>
@@ -634,9 +746,15 @@
                             <RowDefinition x:Name="RowDefinition0" Height="Auto"/>
                             <RowDefinition x:Name="RowDefinition1" Height="*"/>
                         </Grid.RowDefinitions>
-                        <TabPanel x:Name="HeaderPanel" Grid.Row="0" Grid.Column="0" IsItemsHost="true"  
-                                    KeyboardNavigation.TabIndex="1" Panel.ZIndex="1" 
+                        <ScrollViewer  Grid.Row="0" Grid.Column="0" 
+                                       Background="#F4F4F4"
+                                       VerticalScrollBarVisibility="Disabled" 
+                                       HorizontalScrollBarVisibility="Visible"
+                                       Template="{StaticResource ScrollViewerTemplate}" >
+                            <TabPanel x:Name="HeaderPanel"  IsItemsHost="true"  
+                                    KeyboardNavigation.TabIndex="1" Panel.ZIndex="1"
                                     Background="{StaticResource TabPanelBackgroundBrush}"/>
+                        </ScrollViewer>
                         <Border x:Name="ContentPanel" BorderBrush="{TemplateBinding BorderBrush}" 
                                 BorderThickness="0 1 0 0"
                                 Background="{TemplateBinding Background}" 
